[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseblaster"
dynamic = ["version"] # version is defined in __init__.py

description = "Python control code for Pulseblaster pulse generation hardware."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["qt3", "pulseblaster", "ttl", "pulse generator"]

authors = [
    {name = "Zeeshawn Kazi", email = "zeeshawn@uw.edu" },
    {name = "G. Adam Cox", email = "gadamc@gmail.com" },
]

maintainers = [
    {name = "G. Adam Cox", email = "gadamc@gmail.com" },
    {name = "Maxwell Parsons", email = "mfpars@uw.edu " },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",

    # Indicate who your project is intended for
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",

    # Pick your license as you wish
    "License :: OSI Approved :: BSD License",

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by "pip install". See instead "python_requires" below.
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/qt3uw/pulseblaster"
"Source" = "https://github.com/qt3uw/pulseblaster"
"Bug Tracker" = "https://github.com/qt3uw/pulseblaster/issues"
"Changelog" = "https://github.com/qt3uw/pulseblaster/releases"

[tool.setuptools.dynamic]
version = {attr = "pulseblaster.__version__"}
